# rust-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
